# fusiontimeseries

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: analytics.ipynb
playground/: chronos-2-playbook.ipynb  chronos-bolt-tiny-playbook.ipynb  timesfm-2p5-200M-playbook.ipynb  utils.py
src/benchmarking/services/: __init__.py
src/fusiontimeseries/: __init__.py
src/fusiontimeseries/benchmarking/: README.md  benchmark_utils.py  chronos2_benchmark.ipynb  chronos_bolt_tiny_benchmark.ipynb  timesfm_benchmark.ipynb  tirex_benchmark.ipynb
src/fusiontimeseries/benchmarking/few_shot/: README.md  __init__.py  chronos2_fewshot_benchmark.ipynb  chronos_bolt_tiny_fewshot_benchmark.ipynb  few_shot_utils.py  timesfm_fewshot_benchmark.ipynb  tirex_fewshot_benchmark.ipynb
src/fusiontimeseries/benchmarking/zero_shot/: benchmark_utils.py  chronos2_benchmark.ipynb  chronos_bolt_tiny_benchmark.ipynb  timesfm_benchmark.ipynb  tirex_benchmark.ipynb
src/fusiontimeseries/finetuning/: __init__.py  chronos2_augmented_custom_val_finetuning.ipynb  chronos2_augmented_tuned_custom_val_finetuning.ipynb  chronos2_augmented_tuned_finetuning.ipynb  chronos2_finetuning.ipynb  chronos2_tuned_finetuning.ipynb  evaluation_utils.py
src/fusiontimeseries/finetuning/preprocessing/: __init__.py  data_preprocessing.ipynb  utils.py
src/fusiontimeseries/legacy/: benchmark_analysis.ipynb  benchmarkv2_analysis.ipynb
